Sprint 15. Database & tables creation & drop added

--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,12 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+    </dependencies>
 
 </project>
